--- a/HOME-COOKING-SHARE/.gitignore
+++ b/HOME-COOKING-SHARE/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+src/main/resources/application-mail.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
