--- a/HOME-COOKING-SHARE/src/main/resources/application-hibernate.properties
+++ b/HOME-COOKING-SHARE/src/main/resources/application-hibernate.properties
@@ -1,5 +1,5 @@
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.ddl-auto=create
 
