--- a/HOME-COOKING-SHARE/pom.xml
+++ b/HOME-COOKING-SHARE/pom.xml
@@ -156,6 +156,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
