--- a/HOME-COOKING-SHARE/src/main/resources/application.properties
+++ b/HOME-COOKING-SHARE/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8080
 
-spring.profiles.include=database,hibernate,redis,mail,fileUpload
+spring.profiles.include=database,hibernate,redis,mail,fileUpload,axon
