--- a/HOME-COOKING-SHARE/src/main/resources/application-hibernate.properties
+++ b/HOME-COOKING-SHARE/src/main/resources/application-hibernate.properties
@@ -1,7 +1,8 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 #spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
