--- a/HOME-COOKING-SHARE/src/main/resources/application-redis.properties
+++ b/HOME-COOKING-SHARE/src/main/resources/application-redis.properties
@@ -1,5 +1,6 @@
 spring.redis.host=localhost
 spring.redis.port=6379
 
-redis.member=member:
-redis.member.auth=member:auth:
+redis.token-key=home-cooking-share:token:
+redis.member.key=home-cooking-share:member:
+redis.member-list.key=home-cooking-share:member-list
