--- a/HOME-COOKING-SHARE/src/main/resources/application-redis.properties
+++ b/HOME-COOKING-SHARE/src/main/resources/application-redis.properties
@@ -4,3 +4,6 @@ spring.redis.port=6379
 redis.token-key=home-cooking-share:token:
 redis.member.key=home-cooking-share:member:
 redis.member-list.key=home-cooking-share:member-list
+
+redis.recipe.key=home-cooking-share:recipe:
+redis.recipe-list.key=home-cooking-share:recipe-list:
