[recipe query] create recipe query api

--- a/HOME-COOKING-SHARE/src/main/resources/application-redis.properties
+++ b/HOME-COOKING-SHARE/src/main/resources/application-redis.properties
@@ -6,4 +6,4 @@ redis.member.key=home-cooking-share:member:
 redis.member-list.key=home-cooking-share:member-list
 
 redis.recipe.key=home-cooking-share:recipe:
-redis.recipe-list.key=home-cooking-share:recipe-list:
+redis.recipe-list.key=home-cooking-share:recipe-list
